; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_next_kbd.c_next_kbd_recv.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/extr_next_kbd.c_next_kbd_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NEXT_KBD_READ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @next_kbd_recv() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @NEXT_KBD_READ, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i32 (...) @sei()
  store i32 0, i32* %1, align 4
  br label %11

7:                                                ; preds = %0
  %8 = call i32 (...) @query()
  %9 = call i32 (...) @response()
  store i32 %9, i32* %2, align 4
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* %1, align 4
  br label %11

11:                                               ; preds = %7, %5
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @sei(...) #1

declare dso_local i32 @query(...) #1

declare dso_local i32 @response(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
